# Scrap-llm

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .env.template  Dockerfile  logging.yaml  pyproject.toml
backend/app/: __init__.py  main.py  request_schemas.py
backend/app/clients/: chooseBackend.py
backend/app/exceptions/: __init__.py  custom_exceptions.py  handlers.py
backend/app/models/: DealItem.py
backend/app/repositories/: product_repository.py
backend/app/routes/: api.py  health.py
backend/app/services/: crawl.py  extract.py  filter.py  scrap.py
backend/benchmarks/: README.md  app.py
backend/benchmarks/logic/: __init__.py  experiment_runner.py  result_saver.py  test.py  utils.py
backend/benchmarks/ui/: dataset_form.py  experiment_form.py  history_view.py  model_comparison.py  navigation.py
backend/src/scrap_llm/: __init__.py
backend/src/scrap_llm/agents/crawling/: agent.py  callbacks.py  config.py  crawler_agent.py  monitoring.py  schema.py
backend/src/scrap_llm/config/: crawl.py  prompts.py  schemas.py
backend/src/scrap_llm/crawling/: __init__.py  urls_crawler.py
backend/src/scrap_llm/extracting/: __init__.py  extractor_llm.py
backend/src/scrap_llm/extracting/interfaces/: retry_strategy.py
backend/src/scrap_llm/extracting/retry_strategies/: base.py  external_api.py  playwright.py  rate_limiter.py
backend/src/scrap_llm/filtering/: __init__.py  url_filter.py
backend/src/scrap_llm/filtering/filters/: llm_filter.py  (+1 more)
backend/src/scrap_llm/utils/: __init__.py  utils.py
(+69 files in other folders)
